--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "deployment-command-here"
+    "deploy": "node server.js"
   },
   "author": "Halil Ibrahim Bilici",
   "license": "ISC",
