--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "node server.js"
+    "deploy": "node server.js",
+    "start": "node server.js"
   },
   "author": "Halil Ibrahim Bilici",
   "license": "ISC",
@@ -15,7 +16,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongodb": "^5.5.0",
-    "mongodb-connection-string-url": "^2.6.0",
+    "mongodb-connection-string-url": "^2.0.0",
     "mongoose": "^7.1.1"
   }
 }
