--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -14,10 +14,12 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '16'
+      - name: Print current directory
+        run: pwd
 
       - name: Install dependencies
         run: npm install
-        working-directory: ./
+        working-directory: ./halilibrahimbilici
 
       - name: Deploy to GitHub Pages
         env:
