--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Install dependencies
         run: npm install
-        working-directory: ./halilibrahimbilici
+        working-directory: /home/runner/work/halilibrahimbilici/halilibrahimbilici
 
       - name: Deploy to GitHub Pages
         env:
