--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -22,7 +22,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install dependencies
-        run: npm install
+        run: npm ci
         working-directory: ./halilibrahimbilici
 
       - name: Deploy to GitHub Pages
