updated master.yml with run method

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -28,6 +28,4 @@ jobs:
       - name: Deploy to GitHub Pages
         env:
           MONGO_URI: ${{ secrets.MONGO_URI }}
-        run: |
-          cd ./
-          npm run deploy -- --mongo-uri ${{ secrets.MONGO_URI }}
+        run: npm run deploy -- --mongo-uri ${{ secrets.MONGO_URI }}
