run method changed with build method

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -25,7 +25,13 @@ jobs:
         run: npm ci
         working-directory: ./
 
+      - name: Build static files
+        run: npm run build
+        working-directory: ./
+
+
       - name: Deploy to GitHub Pages
-        env:
-          MONGO_URI: ${{ secrets.MONGO_URI }}
-        run: npm run deploy -- --mongo-uri ${{ secrets.MONGO_URI }}
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./public
