--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "modifing-website",
   "version": "1.0.0",
   "description": "This is Abraham Bilici's website",
-  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "node server.js",
+    "build": "node server.js",
     "start": "node server.js"
   },
   "author": "Halil Ibrahim Bilici",
@@ -18,7 +17,8 @@
     "mongodb": "^5.5.0",
     "mongodb-connection-string-url": "^2.0.0",
     "mongoose": "^7.1.1"
-  },"engines": {
+  },
+  "engines": {
     "node": ">=16.0.0"
   },
   "volta": {
