--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "mongoose": "^7.1.1"
   },
   "engines": {
-    "node": ">=16.0.0"
+    "node": "16.x"
   },
   "volta": {
     "node": "16.0.0"
