--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '16'
+          node-version: 16.x
           
       - name: Print current directory
         run: pwd
@@ -28,4 +28,6 @@ jobs:
       - name: Deploy to GitHub Pages
         env:
           MONGO_URI: ${{ secrets.MONGO_URI }}
-        run: npm run deploy -- --mongo-uri ${{ secrets.MONGO_URI }}
+        run: |
+          npm run build
+          npm run deploy -- --mongo-uri ${{ secrets.MONGO_URI }}
