--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -10,24 +10,25 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
-          node-version: 16.x
+         node-version: 16.x    
+      - run: npm ci
+        working-directory: ./    
+      - run: npm run build
+      - run: npm test
+        env:
+          CI: true         
           
-      - name: Print current directory
-        run: pwd
-
-      - name: Checkout repository
-        uses: actions/checkout@v3
-
-      - name: Install dependencies
-        run: npm ci
+      - run: pwd       
         working-directory: ./
 
-      - name: Deploy to GitHub Pages
-        env:
-          MONGO_URI: ${{ secrets.MONGO_URI }}
-        run: |
-          npm run build
-          npm run deploy -- --mongo-uri ${{ secrets.MONGO_URI }}
+      - name: Publish to GitHub Pages Action
+        uses: qoomon/actions-publish-to-github-pages@v1.0.3
+        with:
+          GITHUB_PAGES_SOURCE_DIR: dist # default value:  dist
+          GITHUB_PAGES_BRANCH: gh-pages # default value:  gh-pages
+          GITHUB_PAGES_REPLACE: false   # default value:  false
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        
