--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is Abraham Bilici's website",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "build": "node server.js",
     "deploy": "node server.js",
     "start": "node server.js"
@@ -23,7 +23,8 @@
   "engines": {
     "node": "16.x"
   },
-  "volta": {
-    "node": "16.0.0"
+  "devDependencies": {
+    "chai": "^4.3.7",
+    "mocha": "^10.2.0"
   }
 }
