--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -24,6 +24,9 @@ jobs:
       - run: pwd       
         working-directory: ./
 
+      - name: Set up environment variables
+        run: echo "MONGO_URI=${{ secrets.MONGO_URI }}" >> $GITHUB_ENV
+        
       - name: Publish to GitHub Pages Action
         uses: qoomon/actions-publish-to-github-pages@v1.0.3
         with:
