--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -16,7 +16,7 @@ jobs:
          node-version: 16.x    
       - run: npm ci
         working-directory: ./    
-      - run: npm run build
+      - run: npm run build -- --mongo-uri ${{ secrets.MONGO_URI }}
       - run: npm test
         env:
           CI: true         
@@ -24,9 +24,6 @@ jobs:
       - run: pwd       
         working-directory: ./
 
-      - name: Set up environment variables
-        run: echo "MONGO_URI=${{ secrets.MONGO_URI }}" >> $GITHUB_ENV
-        
       - name: Publish to GitHub Pages Action
         uses: qoomon/actions-publish-to-github-pages@v1.0.3
         with:
