--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,40 +1,60 @@
-# This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
 name: Node.js CI
 
 on:
   push:
     branches: "master"
-  pull_request:
-    branches: "master"
+  
+env:
+  MONGO_URI: ${{ secrets.MONGO_URI }}
+
+permissions: 
+  contents: read
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
-    # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
     steps:
     - uses: actions/checkout@v3
-    - name: Use Node.js
+
+    - name: Set up Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: 16.x
+        node-version: '16.x'
         cache: 'npm'
+
     - name: MongoDB in GitHub Actions
       uses: supercharge/mongodb-github-action@1.9.0
       with:
         mongodb-version: '4.4'
+
     - run: pwd       
-      working-directory: ./    
-    - run: npm ci
-    - run: npm install
-    - name: build
-      env:
-          MONGO_URI: ${{ secrets.MONGO_URI }}
-      run: npm run build -- --mongo-uri ${{ secrets.MONGO_URI }} --if-present 
-    - run: npm test
-      env:
-        CI: true
+      working-directory: ./
+      
+    - name: npm install, build, and test 
+      run: |
+        npm install
+        npm run build --if-present 
+        npm run test --if-present
+     
+    - name: Upload artifact for deployment job
+      uses: actions/upload-artifact@v3
+      with:
+        name: node-app
+        path: .    
+
+
+  deploy:
+    permissions:
+      contents: none 
+    runs-on: ubuntu-latest
+    needs: build
+    
+    steps:
+      - name: Download artifact from build job
+        uses: actions/download-artifact@v3
+        with:
+          name: node-app  
+
+    
+            
