--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "mocha",
-    "build": "node server.js && npm run test",
+    "build": "npm-run-all start test",
     "deploy": "node server.js",
     "start": "node server.js"
   },
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "chai": "^4.3.7",
-    "mocha": "^10.2.0"
+    "mocha": "^10.2.0",
+    "npm-run-all": "^4.1.5"
   }
 }
