--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -18,6 +18,9 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
+    - name: npm install
+      run: npm install
+
     - name: Set up Node.js
       uses: actions/setup-node@v3
       with:
@@ -34,10 +37,8 @@ jobs:
       
     - name: npm install, build, and test 
       run: |
-        npm install
         npm run build --if-present 
-        npm run test --if-present
-     
+             
     - name: Upload artifact for deployment job
       uses: actions/upload-artifact@v3
       with:
