--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,7 +13,7 @@ permissions:
 
 jobs:
   build:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
 
@@ -33,9 +33,7 @@ jobs:
     - run: pwd       
       working-directory: ./
       
-    - name: npm install, build, and test 
-      run: |
-        npm run build --if-present 
+    
              
     - name: Upload artifact for deployment job
       uses: actions/upload-artifact@v3
