--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -52,4 +52,4 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v3
         with:
-          name: node-app        
+          name: node-apprun        
