--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -43,6 +43,8 @@ jobs:
           destination: ./_site
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v1
+      - name: server
+        run: npm run build  
 
   # Deployment job
   deploy:
