--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,6 +12,7 @@ jobs:
      with:
       node-version: '16.x'
    - run: npm install -g
+   - run: pwd
    - name: Node to GH
      uses: FdelMazo/node-to-gh-action@v2
    - run: node server.js 
