--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gh-pages": "^5.0.0",
     "mongodb": "^5.5.0",
     "mongodb-connection-string-url": "^2.0.0",
+    "mongodb-realm-cli": "^2.6.2",
     "mongoose": "^7.1.1"
   },
   "engines": {
